--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
+    <title>Efficient Frontier</title>
   </head>
   <body>
     <div id="app"></div>
+    <script defer data-domain="efficient-frontier.capital" src="https://plausible.io/js/plausible.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
